# scipy-dlaed4

./: README.md  build.py  flake.nix  pyproject.toml
lapack_extra/: LAPACK_extra.c  LAPACK_extra.pyx
scipy_dlaed4/: __init__.py
