[tool.poetry]
name = "scipy-dlaed4"
version = "0.1.0"
description = ""
authors = ["Baskaran Sripathmanathan <baskaran@robots.ox.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.23.5"
scipy = "^1.10.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

# This is underdocumented, and probably subject to change with future poetry versions!
[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "numpy", "scipy", "setuptools"]
build-backend = "poetry.core.masonry.api"
